# samples

./: .gitignore  README.md
C#/CSharpFeaturesDemo/CSharpFeaturesDemo/: App.xaml.cs
C#/CSharpFeaturesDemo/EventAggregator/: EventAggregator.cs
C++/FibLookup/: FrequencyTicker.cpp  FrequencyTicker.h  fibonacci_sequence_first_1000_values.txt
CSharpFeaturesDemo/: CSharpFeaturesDemo.sln
CSharpFeaturesDemo/CSharpFeaturesDemo/: App.xaml  App.xaml.cs  CSharpFeaturesDemo.csproj  MainWindow.xaml  MainWindow.xaml.cs
CSharpFeaturesDemo/CustomControls/: CustomControls.csproj
CSharpFeaturesDemo/EventAggregator/: EventAggregator.cs
CSharpFeaturesDemo/WpfPluginInterface/: IWpfPlugin.cs
CaliburnSampleApp/: CaliburnSampleApp.sln
CaliburnSampleApp/CaliburnSampleApp/: App.config  App.xaml  CaliburnSampleApp.csproj
FibLookup/: CMakeLists.txt  FTR_CodingTest_UnitTests.cpp  FrequencyTicker.h  main.cpp
Python/: basicFunction.py  clinic.py  listsAndDictionaries.py  listsAndDictionaries_2.py  studentScores.py  takingAVacation.py  taxCalculator.py  tipCalculator.py
WPF/CaliburnSampleApp/: .gitignore
WPF/ShapesBrushesAndTransformsExample/: ShapesBrushesAndTransformsExample.sln
WPF/WpfTemplateExample/: WpfTemplateExample.sln
WixWpfApplication/: WixWpfApplication.sln
WixWpfApplication/WixSetupProject/: Product.wxs  WixSetupProject.wixproj
WixWpfApplication/WixWpfApplication/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  WixWpfApplication.csproj
docker/netbox/: README.md  netbox.env  netbox.yaml  postgres.env
(+140 files in other folders)
